man page install + wrong args error msg

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 lib_LTLIBRARIES = libvdeplug_slirp.la
 
+man_MANS = libvdeplug_slirp.1
+
 AM_CFLAGS = -Wall -O2 
 
 libvdeplug_slirp_la_SOURCES = libvdeplug_slirp.c
